Undo previous changes - reinstate non-radio button testing and Capacity card and make radio version dev only

--- a/Layouts/testing.yaml
+++ b/Layouts/testing.yaml
@@ -25,107 +25,107 @@ cards:
 
 # Only shown for UK
 
-  # - heading: Testing and capacity
-  #   cardType: chart
-  #   locationAware:
-  #     included: 
-  #       areaType:
-  #         - overview
+  - heading: Testing and capacity
+    cardType: chart
+    locationAware:
+      included: 
+        areaType:
+          - overview
 
-  #   fullWidth: true
-  #   abstract: >
-  #     Number of lab-confirmed positive or negative COVID-19 test results, by date reported.  This is a count of 
-  #     test results and may include multiple tests for an individual person.  It includes all types of testing (swab
-  #     testing for antigens, antibody testing and surveillance testing). Testing capacity is based on reports from 
-  #     labs on how many tests they have capacity to carry out each day based on availability of staff and resources.
+    fullWidth: true
+    abstract: >
+      Number of lab-confirmed positive or negative COVID-19 test results, by date reported.  This is a count of 
+      test results and may include multiple tests for an individual person.  It includes all types of testing (swab
+      testing for antigens, antibody testing and surveillance testing). Testing capacity is based on reports from 
+      labs on how many tests they have capacity to carry out each day based on availability of staff and resources.
 
-  #   download:
-  #     - plannedCapacityByPublishDate
-  #     - capacityPillarOneTwoFour
-  #     - newTestsByPublishDate
-  #     - cumTestsByPublishDate
+    download:
+      - plannedCapacityByPublishDate
+      - capacityPillarOneTwoFour
+      - newTestsByPublishDate
+      - cumTestsByPublishDate
 
-  #   tabs:
-  #     - heading: Daily
-  #       tabType: chart
-  #       barType: normal
-  #       fields:
-  #         - label: Tests processed
-  #           value: newTestsByPublishDate
-  #           tooltip: Daily number of tests processed (all pillars) by date reported
-  #           type: bar
-  #           colour: 0
-  #           rollingAverage: false
+    tabs:
+      - heading: Daily
+        tabType: chart
+        barType: normal
+        fields:
+          - label: Tests processed
+            value: newTestsByPublishDate
+            tooltip: Daily number of tests processed (all pillars) by date reported
+            type: bar
+            colour: 0
+            rollingAverage: false
 
-  #         - label: Tests processed (7-day average)
-  #           value: newTestsByPublishDate
-  #           tooltip: 7 day rolling average of the daily number of tests processed (all pillars)
-  #           type: line
-  #           colour: 3
-  #           fill: false
-  #           rollingAverage: true
+          - label: Tests processed (7-day average)
+            value: newTestsByPublishDate
+            tooltip: 7 day rolling average of the daily number of tests processed (all pillars)
+            type: line
+            colour: 3
+            fill: false
+            rollingAverage: true
 
-  #         - label: Testing capacity (all pillars)
-  #           value: plannedCapacityByPublishDate
-  #           tooltip: Estimated daily total capacity reported by laboratories
-  #           type: line
-  #           colour: 6
-  #           fill: true
-  #           rollingAverage: false
+          - label: Testing capacity (all pillars)
+            value: plannedCapacityByPublishDate
+            tooltip: Estimated daily total capacity reported by laboratories
+            type: line
+            colour: 6
+            fill: true
+            rollingAverage: false
 
-  #         - label: Testing capacity (pillars 1, 2 & 4)
-  #           value: capacityPillarOneTwoFour
-  #           tooltip: Estimated daily pillar 1, 2 and 4 capacity reported by laboratories
-  #           type: line
-  #           colour: 1
-  #           fill: true
-  #           rollingAverage: false
+          - label: Testing capacity (pillars 1, 2 & 4)
+            value: capacityPillarOneTwoFour
+            tooltip: Estimated daily pillar 1, 2 and 4 capacity reported by laboratories
+            type: line
+            colour: 1
+            fill: true
+            rollingAverage: false
 
-  #     - heading: Cumulative
-  #       tabType: chart
-  #       barType: normal
-  #       fields:
-  #         - label: Tests processed
-  #           value: cumTestsByPublishDate
-  #           tooltip: Cumulative total number of tests processed (all pillars) by date reported
-  #           type: bar
-  #           colour: 0
-  #           rollingAverage: false
+      - heading: Cumulative
+        tabType: chart
+        barType: normal
+        fields:
+          - label: Tests processed
+            value: cumTestsByPublishDate
+            tooltip: Cumulative total number of tests processed (all pillars) by date reported
+            type: bar
+            colour: 0
+            rollingAverage: false
 
-  #     - heading: Data
-  #       tabType: table
-  #       fields:
-  #         - label: Date reported
-  #           value: date
-  #           type: date
-  #           tooltip: Date reported on coronavirus.data.gov.uk
+      - heading: Data
+        tabType: table
+        fields:
+          - label: Date reported
+            value: date
+            type: date
+            tooltip: Date reported on coronavirus.data.gov.uk
 
-  #         - label: Daily tests processed
-  #           value: newTestsByPublishDate
-  #           type: numeric
-  #           tooltip: Daily number of tests processed by date reported
+          - label: Daily tests processed
+            value: newTestsByPublishDate
+            type: numeric
+            tooltip: Daily number of tests processed by date reported
 
-  #         - label: Cumulative tests processed
-  #           value: cumTestsByPublishDate
-  #           type: numeric
-  #           tooltip: Cumulative total number of tests processed by date reported
+          - label: Cumulative tests processed
+            value: cumTestsByPublishDate
+            type: numeric
+            tooltip: Cumulative total number of tests processed by date reported
      
-  #         - label: Lab capacity (all pillars)
-  #           value: plannedCapacityByPublishDate
-  #           type: numeric
-  #           tooltip: Estimated daily total capacity reported by laboratories (all pillars)
+          - label: Lab capacity (all pillars)
+            value: plannedCapacityByPublishDate
+            type: numeric
+            tooltip: Estimated daily total capacity reported by laboratories (all pillars)
 
-  #         - label: Lab capacity (pillars 1,2 & 4)
-  #           value: capacityPillarOneTwoFour
-  #           type: numeric
-  #           tooltip: Estimated daily pillar 1, 2 and 4 capacity reported by laboratories
+          - label: Lab capacity (pillars 1,2 & 4)
+            value: capacityPillarOneTwoFour
+            type: numeric
+            tooltip: Estimated daily pillar 1, 2 and 4 capacity reported by laboratories
 
-  #     - heading: About 
-  #       tabType: metadata
-  #       filename: cardMetadata/testing/cardTestingAndCapacity.md
+      - heading: About 
+        tabType: metadata
+        filename: cardMetadata/testing/cardTestingAndCapacity.md
 
 ##############################################################################################################################
-
+# {{ StartDevOnlyBlock}}
 # Only shown for UK
 
   - heading: Testing and capacity, by pillar
@@ -336,7 +336,7 @@ cards:
         - heading: About 
           tabType: metadata
           filename: cardMetadata/testing/cardTestingAndCapacity.md
-
+# {{ EndDevOnlyBlock}}
 ##############################################################################################################################
 
   - heading: Testing by Pillar
