Re-added Pillar 1&2 and Pillar 4 breakdowns to testing and capacity radio button card for review

--- a/Layouts/testing.yaml
+++ b/Layouts/testing.yaml
@@ -148,13 +148,16 @@ cards:
       - capacityPillarOne
       - capacityPillarTwo
       - capacityPillarThree
+#      - capacityPillarFour
       - capacityPillarOneTwoFour
+      - capacityPillarOneTwo
       - newTestsByPublishDate
       - newPillarOneTestsByPublishDate
       - newPillarTwoTestsByPublishDate
       - newPillarThreeTestsByPublishDate
       - newPillarFourTestsByPublishDate
       - newPillarOneTwoFourTestsByPublishDate
+      - newPillarOneTwoTestsByPublishDate
       - cumTestsByPublishDate
 
     options:
@@ -163,7 +166,9 @@ cards:
       choices:
         - All pillars
         - Pillars 1 2 4
+        - Pillars 1 2
         - Pillar 3
+        - Pillar 4
     
     All pillars:
       
@@ -285,6 +290,58 @@ cards:
           tabType: metadata
           filename: cardMetadata/testing/cardTestingAndCapacity.md
 
+    Pillars 1 2:
+      
+      tabs:
+        - heading: Daily
+          tabType: chart
+          barType: normal
+          fields:
+            - label: Tests processed (pillars 1 & 2)
+              value: newPillarOneTwoTestsByPublishDate
+              tooltip: Daily number of tests processed by date reported (pillars 1 & 2)
+              type: bar
+              colour: 0
+              rollingAverage: false
+
+            - label: Tests processed (pillars 1 & 2, 7-day average)
+              value: newPillarOneTwoTestsByPublishDate
+              tooltip: 7 day rolling average of the daily number of tests processed (pillars 1 & 2)
+              type: line
+              colour: 3
+              fill: false
+              rollingAverage: true
+
+            - label: Testing capacity (pillars 1 & 2)
+              value: capacityPillarOneTwo
+              tooltip: Estimated daily capacity reported by laboratories (pillars 1 & 2)
+              type: line
+              colour: 6
+              fill: true
+              rollingAverage: false
+
+        - heading: Data
+          tabType: table
+          fields:
+            - label: Date reported
+              value: date
+              type: date
+              tooltip: Date reported on coronavirus.data.gov.uk
+
+            - label: Daily tests processed (pillars 1 & 2)
+              value: newPillarOneTwoTestsByPublishDate
+              type: numeric
+              tooltip: Daily number of tests processed by date reported (pillars 1 & 2)
+
+            - label: Lab capacity (pillars 1 & 2)
+              value: capacityPillarOneTwo
+              type: numeric
+              tooltip: Estimated daily capacity reported by laboratories (pillars 1 & 2)
+
+        - heading: About 
+          tabType: metadata
+          filename: cardMetadata/testing/cardTestingAndCapacity.md
+
     Pillar 3:
       
       tabs:
@@ -336,6 +393,59 @@ cards:
         - heading: About 
           tabType: metadata
           filename: cardMetadata/testing/cardTestingAndCapacity.md
+
+    Pillar 4:
+      
+      tabs:
+        - heading: Daily
+          tabType: chart
+          barType: normal
+          fields:
+            - label: Tests processed (pillar 4)
+              value: newPillarFourTestsByPublishDate
+              tooltip: Daily number of tests processed by date reported (pillar 4)
+              type: bar
+              colour: 0
+              rollingAverage: false
+
+            - label: Tests processed (pillar 4, 7-day average)
+              value: newPillarFourTestsByPublishDate
+              tooltip: 7 day rolling average of the daily number of tests processed (pillar 4)
+              type: line
+              colour: 3
+              fill: false
+              rollingAverage: true
+
+#            - label: Testing capacity (pillar 4)
+#              value: capacityPillarFour
+#              tooltip: Estimated daily capacity reported by laboratories (pillar 4)
+#              type: line
+#              colour: 6
+#              fill: true
+#              rollingAverage: false
+
+        - heading: Data
+          tabType: table
+          fields:
+            - label: Date reported
+              value: date
+              type: date
+              tooltip: Date reported on coronavirus.data.gov.uk
+
+            - label: Daily tests processed (pillar 4)
+              value: newPillarFourTestsByPublishDate
+              type: numeric
+              tooltip: Daily number of tests processed by date reported (pillar 4)
+
+#            - label: Lab capacity (pillar 4)
+#              value: capacityPillarFour
+#              type: numeric
+#              tooltip: Estimated daily capacity reported by laboratories (pillar 4)
+
+        - heading: About 
+          tabType: metadata
+          filename: cardMetadata/testing/cardTestingAndCapacity.md
+
 # {{ EndDevOnlyBlock}}
 ##############################################################################################################################
 
